# django-w-blog

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  docker-image.yml  docker-publish.yml
blog/: __init__.py  apps.py
blog/api/: __init__.py  apps.py  urls.py
blog/apps/: __init__.py  mixins.py  signals.py
blog/apps/articles/: __init__.py  apps.py  models.py
blog/apps/articles/migrations/: 0001_initial.py  0002_initial.py  0003_alter_blogarticle_content.py  0004_alter_blogarticle_content.py  0005_alter_blogarticle_content.py  0006_alter_blogarticle_content.py  0007_alter_blogarticle_content.py  0008_alter_blogarticle_content.py
blog/apps/articles/tests/: __init__.py  test_models.py
blog/apps/categories/: __init__.py  apps.py  models.py
blog/apps/categories/migrations/: 0001_initial.py
blog/apps/categories/tests/: __init__.py  test_models.py
blog/apps/home/: __init__.py  apps.py  models.py
blog/apps/home/tests/: __init__.py  test_models.py
blog/apps/indexes/: __init__.py  apps.py  models.py
blog/apps/indexes/migrations/: 0001_initial.py  0002_alter_blogindex_content.py  0003_alter_blogindex_content.py  0004_alter_blogindex_content.py  0005_alter_blogindex_content.py
blog/apps/indexes/tests/: __init__.py  test_models.py
blog/apps/tags/: apps.py  models.py
blog/apps/tags/migrations/: 0001_initial.py
blog/cms/: __init__.py  apps.py  blocks.py
blog/ui/: __init__.py  apps.py  urls.py  views.py
blog/ui/static/blog/: README.md
blog/ui/templatetags/: blog.py
(+19 files in other folders)
