[tool.poetry]
name = "django-w-blog"
version = "0.2.5"
description = "A reusable blog app powered by Python, Django, DRF, Wagtail CMS, TailwindCSS and DaisyUI."
authors = ["Yousef Abu Shanab <josephyousef249@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "blog" }]
homepage = "https://github.com/youzarsiph/django-w-blog"
repository = "https://github.com/youzarsiph/django-w-blog"
documentation = "https://github.com/youzarsiph/django-w-blog"

[tool.poetry.dependencies]
python = ">=3.10"
django = ">=5.2.1"
djangorestframework = ">=3.16.0"
drf-restwind = ">=0.2.0"
wagtail = ">=7.0"
wagtail-tw-blocks = ">=0.2.6"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = ">=6.0.0"
black = ">=25.1.0"
ruff = ">=0.11.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
